compiler/testData/asJava/lightClasses/compilationErrors/AnnotationModifiers.kt
// A

class A {
    @Synchronized
    @Strictfp
    fun f() {

    }

    @Transient
    @Volatile
    var c: String = ""
}